# LodaxOS

./: .disk_cache.json  .gitignore  APbootupdetails.md  BUGS.md  Cargo.toml  bootupdetails.md  build.bat  check_rip.py  clean.bat  create_disk_image.bat  create_disk_image.py  create_disk_image.sh  debug-run.bat  debugrun.bat  fullrun.bat  genfont.py  memory.md  rebuild_disk.py  run.bat  run_test.bat  run_test2.bat  serial.txt  task.md  verify_disk.py
boot/: Cargo.toml
boot/src/: load_kernel.rs  logger.rs  main.rs  mp.rs  serial.rs
chain/: Cargo.toml
chain/src/: main.rs
docs/: APbootupdetails.md  ARCHITECTURE.md  OVERVIEW.md  bootupdetails.md  idea.md  memory.md
docs/architecture/: 00-overview.md  01-crate-structure.md  02-memory-model.md  03-interrupt-model.md  04-task-scheduling.md  05-elf-boot-protocol.md  06-acpi-platform.md  07-build-disk-system.md  08-fault-recovery.md  09-subsystem-interfaces.md  10-future-architecture.md  build-architecture.ps1
docs/boot/: README.md
docs/drivers/: README.md
docs/kernel/: README.md  driver-framework.md  interrupts.md  memory-management.md  scheduling.md  smp.md
docs/system/: README.md
drivers/: Cargo.toml  linker.ld  pkg.py  target.json
exrun/: Cargo.toml  linker.ld  target.json
exrun/src/: main.rs
katerm/: katerm_client.py
kernel/: Cargo.toml  gensym.py  gensymtab.py  linker.ld  target.json
kernel/.cargo/: config.toml
kernel/src/: ap_start.rs  cap.rs  consts.rs  (+14 more)
shared/: Cargo.toml
sr/: Cargo.toml  linker.ld  target.json
src/: ap_start.rs  cap.rs  main.rs  percpu.rs  task.rs
system/: Cargo.toml
(+76 files in other folders)
